--- a/style.css
+++ b/style.css
@@ -1,18 +1,109 @@
+*,
+*::after,
+*::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    --primary-bg:  #ebf0fa;
+    --secondary-bg:  #178582;
+    --tertiary-bg:  #0a1828;
+    --accent-bg: #bfa181;
+    --black: #171717;
+    --white: #f9fafb;
+    --gray: #3f3f46;
+    --green: #33be33;
+    --red: #da1212;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body{
+    background-color: var(--primary-bg);
+    color: var(--black);
+}
+
+header{
+    background-color: var(--tertiary-bg);
+    color: var(--white);
+    text-align: center;
+    margin-bottom: 2rem;
+    padding: 12px;
+}
+button{
+    background-color: var(--secondary-bg);
+    color: var(--white);
+    font-weight: 600;
+    outline: none;
+    border: none;
+}
+button:hover{
+    cursor: pointer;
+}
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+main > *{
+    width: 307px;
+}
+.selection{
+    height: 60px;
+    font-size: 18px;
+}
+.display-picks{
+    height: 30px;
+    font-size: 14px;
+}
+.display-result{
+    height: 25px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+}
+.mark{
+    width: 70px;
+    height: 30px;
+    margin: 6px;
+}
+.mark:focus{
+    border: 2px solid var(--gray);
+}
+button[value="X"]{
+    background-color: var(--green);
+}
+button[value="O"]{
+    background-color: var(--red);
+}
+
 .gameboard{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 302px;
-    height: 302px;
+    height: 307px;
     gap: 1px;
 }
 
 .cell{
+    background-color: var(--white);
+    font-size: 24px;
+    font-weight: 600;
     width: 100px;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
-    border: 1px solid black;
+    border: 1px solid var(--gray);
     cursor: pointer;
+}
+
+.reset-game button{
+    width: 150px;
+    height: 40px;
+}
+.reset-game{
+    display: flex;
+    justify-content: center;
 }
