--- a/style.css
+++ b/style.css
@@ -6,53 +6,59 @@
     box-sizing: border-box;
 }
 :root{
-    --primary-bg:  #ebf0fa;
-    --secondary-bg:  #178582;
-    --tertiary-bg:  #0a1828;
-    --accent-bg: #bfa181;
     --black: #171717;
     --white: #f9fafb;
-    --gray: #3f3f46;
+    --accent-primary:  #178582;
+    --accent-secondary:  #0a1828;
     --green: #33be33;
     --red: #da1212;
-
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
-    background-color: var(--primary-bg);
+    background-color: var(--white);
     color: var(--black);
 }
 
 header{
-    background-color: var(--tertiary-bg);
+    background-color: var(--black);
     color: var(--white);
     text-align: center;
     margin-bottom: 2rem;
     padding: 12px;
 }
 button{
-    background-color: var(--secondary-bg);
+    background-color: var(--accent-primary);
     color: var(--white);
     font-weight: 600;
     outline: none;
     border: none;
+    width: 150px;
+    height: 40px;
 }
-button:hover{
+button:hover,
+.mark:hover{
     cursor: pointer;
+    background-color: var(--accent-secondary);
 }
-main {
+main,
+.selection {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 10px;
+    padding: 14px;
 }
-main > *{
-    width: 307px;
-}
+
 .selection{
-    height: 60px;
+    gap: 4px;
+    padding: 8px;
     font-size: 18px;
+    font-weight: 600;
+}
+.picks{
+    display: flex;
+    justify-content: center;
 }
 .display-picks{
     height: 30px;
@@ -70,8 +76,10 @@ main > *{
     margin: 6px;
 }
 .mark:focus{
-    border: 2px solid var(--gray);
+    outline: 2px solid var(--accent-primary);
+    background-color: var(--accent-secondary);
 }
+
 button[value="X"]{
     background-color: var(--green);
 }
@@ -95,13 +103,8 @@ button[value="O"]{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid var(--gray);
+    border: 1px solid var(--accent-secondary);
     cursor: pointer;
-}
-
-.reset-game button{
-    width: 150px;
-    height: 40px;
 }
 .reset-game{
     display: flex;
