--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 :root{
     --black: #171717;
     --white: #f9fafb;
-    --accent-primary:  #178582;
-    --accent-secondary:  #0a1828;
-    --green: #33be33;
+    --accent-primary: #33be33;
+    --accent-secondary: #0a1828;
+    --blue: #178582;
     --red: #da1212;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -64,11 +64,14 @@ main,
 }
 #play{
     margin-top: auto;
+    display: none;
 }
 .display-picks{
     height: 30px;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 500;
 }
+
 .display-result{
     height: 25px;
     font-size: 20px;
@@ -83,7 +86,7 @@ main,
     background-color: var(--accent-secondary);
 }
 button[value="X"]{
-    background-color: var(--green);
+    background-color: var(--blue);
 }
 button[value="O"]{
     background-color: var(--red);
